--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import-normalize; /* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -8,7 +9,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.spinner {
+  margin: 0 auto;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 html {
   box-sizing: border-box;
   width: 100vw;
